# template

./: .gitignore  CMakeLists.txt  template.jucer
FaustResources/: multiheadFeedback.dsp
Source/: Main.cpp  PluginAudioProcessor.cpp  PluginAudioProcessor.h  PluginAudioProcessor.hpp
Source/dsp/: Mappers.h  ParameterSetup.cpp  ParameterSetup.h  Processor.cpp  Processor.h  Processor.hpp
Source/dsp/Bones/: FaustMultiheadFeedback.h  GainBone.cpp  GainBone.h
Source/looknfeel/: StripKnob_look_n_feel.h  ToogleButtonLookAndFeel.h  TopBarLookAndFeel.h
Source/ui/: gui.cpp  gui.h  gui.hpp
Source/ui/components/: TopBarComponent.cpp  TopBarComponent.h
